[ALLI-2547] layout changes in search results. Highlight available online with green dot. Wider field for record information in desktop search results. group callnumber visible by default. Fixed search results tabs for mobile layout.

--- a/web/interface/themes/ndl/css/480mobile.css
+++ b/web/interface/themes/ndl/css/480mobile.css
@@ -353,7 +353,7 @@
     }
 
     .module-MetaLib h3.metalibSearchSets {
-        margin-top: 0;
+        margin-top: 10px;
     }
 
     .module-MetaLib #deferredResults #content {        
@@ -434,6 +434,18 @@
     .sidegroup dl.year.collapsible.timeline.open.collapsed dt {
         background-position: 102.8% 46% !important;
     }
+	.itemLocationInfo {
+		white-space: normal;
+		text-overflow: ellipsis;
+	}
+	.itemLocationInfo .groupCallnumber {
+		display:inline-block;	
+	}
+	.tabNavi ul.ui-tabs-nav > li a {
+		padding-left: 30px;
+		padding-right: 7px;
+		font-size:0.85em;
+	}
     
     /* Advanced search */
     #searchHolder .group {
@@ -659,7 +671,6 @@
     .ui-tabs  .ui-tabs-nav > li {
         border-bottom-left-radius:7px;
         border-bottom-right-radius:7px;
-        margin: 0 3px 3px 0 !important;
     }
     
     .ui-tabs .ui-tabs-nav li.ui-tabs-selected {
